Update HeaderPane.java